--- a/Knowledge/Knowledge/Knowledge.vcxproj.filters
+++ b/Knowledge/Knowledge/Knowledge.vcxproj.filters
@@ -36,6 +36,21 @@
     <ClCompile Include="Canny.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TestShiftCamera.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="OpticalFlow.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestLK.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestObjectDetection.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestSVM.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Knowledge.h">
